--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+async-nats = "0.35.1"
+clap = { version = "4.5.7", features = ["derive"] }
+futures = "0.3.30"
+tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
