--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 async-nats = "0.35.1"
 clap = { version = "4.5.7", features = ["derive"] }
 futures = "0.3.30"
+ratatui = "0.27.0"
 tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
