--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 async-nats = "0.35.1"
 clap = { version = "4.5.7", features = ["derive"] }
+crossterm = { version = "0.27.0", features = ["event-stream"] }
 futures = "0.3.30"
 ratatui = "0.27.0"
 tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
