--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ crossterm = { version = "0.27.0", features = ["event-stream"] }
 futures = "0.3.30"
 ratatui = "0.27.0"
 tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
+tokio-util = "0.7.11"
